Added rustfmt check to ci

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,3 +17,5 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Run rustfmt
+      run: cargo fmt -- --check
